@@ -1,0 +1,3 @@
+import unittest
+
+unittest.main('test.test_warnings')
